--- a/toastVisualization.html
+++ b/toastVisualization.html
@@ -190,7 +190,7 @@ That's it! In the next section we will do some more advanced filtering, or feel 
         <a href="toastBUSCO.html" class="button fit ">Back to: Previous Page</a>
         <br/>
         <br/>
-        <a href="toastBUSCO.html" class="button fit ">Skip to: Utilities | Interactive Plots</a>
+        <a href="toastUtilities.html" class="button fit ">Skip to: Utilities | Interactive Plots</a>
         <br/>
         <br/>
         <a href="toastInstall.html" class="button fit ">Back to: Installation</a>
