--- a/current.html
+++ b/current.html
@@ -148,6 +148,16 @@
 			
 								</div>
 								<hr />
+								<div class="div8"> 
+										<a class="image left">
+										<img src=""
+										alt="" /></a>
+									<b>Phillip Souza</b><br>
+									<i>Undergraduate, Junior</i><br>
+										I am an Undergraduate Junior at UNC Charlotte, who is majoring in Biology with a minor in Bioinformatics. I've always had a habit of questioning the world around me since I was a small child (perhaps to the exasperation of my parents during my younger years) and have decided to put my inquisitive personality to good use in research. I joined the Evolutionary Informatics Lab hoping to gain experience that would be more suitable for real world research than quiz taking is. I currently work on updating TOAST, a package for the R coding language that helps assemble multiple sequence alignments. 
+			
+								</div>
+								<hr />
 								<div class="div9"> 
 
 										<a class="image left">
