--- a/IntroToScriptingExercises.html
+++ b/IntroToScriptingExercises.html
@@ -1893,7 +1893,7 @@ Write an awk command that prints the lines of elementarySchoolShark.txt that con
 <div id="problem-4-8" class="section level4">
 <h4>Problem 4</h4>
 <p>Use awk to print the number of sequences in a fasta file</p>
-<button id="code-button59" class="button" onclick="showCode(&#39;code-block59&#39;, &#39;code-button59)">Show code</button>
+<button id="code-button59" class="button" onclick="showCode(&#39;code-block59&#39;, &#39;code-button59&#39;)">Show code</button>
 <div id="code-block59" class="hidden">
 <div class="mini-divider">
 
