--- a/IntroToScriptingExercises.html
+++ b/IntroToScriptingExercises.html
@@ -1875,7 +1875,8 @@ cat squid_revcomp.fasta
 </div>
 <div id="problem-3-8" class="section level4">
 <h4>Problem 3</h4>
-Write an awk command that prints the lines of elementarySchoolShark.txt that contain both “shark” and “goblin”. <button id="code-button58" class="button" onclick="showCode(&#39;code-block58&#39;, &#39;code-button58&#39;)">Show code</button>
+<p>Write an awk command that prints the lines of elementarySchoolShark.txt that contain both “shark” and “goblin”.</p>
+<button id="code-button58" class="button" onclick="showCode(&#39;code-block58&#39;, &#39;code-button58&#39;)">Show code</button>
 <div id="code-block58" class="hidden">
 <div class="mini-divider">
 
