--- a/software.html
+++ b/software.html
@@ -80,6 +80,16 @@
 								</div>
 								<hr />
 								<div class="div3"> 
+								<h3>Command Line From Zero </h3>
+								<p><a href="commandline.html" class="image left"><img src="images/graffiti2.jpg" alt="" /></a> This is a small course to teach the foundation of using the command line in bioinformatics and genomics. </p><p>This is the foundation for our course on working with UCE data and also a fundamental skill in informatics. This course is developed in a customized markdown environment along with practice problems to complement the material. </p>
+								<div class="col-6 col-12-xsmall">
+										<ul class="actions fit small">
+											<li><a href="commandline.html" class="button custom fit ">Learn Command Line</a></li>
+										</ul>
+									</div>
+								</div>
+								<hr />
+								<div class="div4"> 
 								<h3>Additional Scripts </h3>
 								<p><span class="image left"><img src="images/toadfish3.png" alt="" /></span> Here we provide an overview of custom scripts that were created in the course of our projects  with detailed tutorials and additional content</p><p>This archive will be updated as new work is published and provide links to the corresponding data files allowing you to replicate our results while learning new techniques </p>
 								<p> Please check back periodically for new updates!</p>
