--- a/commandline.html
+++ b/commandline.html
@@ -79,7 +79,7 @@
 						<!-- About -->
 							<article id="About">
 								<h2 class="major">What is this course?</h2>
-								<span class="image main"><img src="images/salamander.jpg" alt="" /></span>
+								<span class="image main"><img src="images/Salamander.jpg" alt="" /></span>
 								<p>Knowing how to work in command line can make troublesome bioinformatic chores a breeze. <br/> <br/> However, not everyone has access to an instructor and code is often scattered across dozens of forum pages. <br/><br/> 
 								This mini course was designed to consolidate the scattered nuggets of command line prompts into one html markdown. </p>
 								<p>In the lessons each tab is a seperate topic for you to explore. In the corresponding practice, you will find problem sets and solutions that build on the concepts covered.<br/> <br/> 								
