added lionfish image
added an image of a lionfish

--- a/software.html
+++ b/software.html
@@ -81,7 +81,7 @@
 								<hr />
 								<div class="div3"> 
 								<h3>Command Line From Zero </h3>
-								<p><a href="commandline.html" class="image left"><img src="images/graffiti2.jpg" alt="" /></a> This is a small course to teach the foundation of using the command line in bioinformatics and genomics. </p><p>This is the foundation for our course on working with UCE data and also a fundamental skill in informatics. This course is developed in a customized markdown environment along with practice problems to complement the material. </p>
+								<p><a href="commandline.html" class="image left"><img src="images/lionfish.jpg" alt="" /></a> This is a small course to teach the foundation of using the command line in bioinformatics and genomics. </p><p>This is the foundation for our course on working with UCE data and also a fundamental skill in informatics. This course is developed in a customized markdown environment along with practice problems to complement the material. </p>
 								<div class="col-6 col-12-xsmall">
 										<ul class="actions fit small">
 											<li><a href="commandline.html" class="button custom fit ">Learn Command Line</a></li>
