--- a/commandline.html
+++ b/commandline.html
@@ -77,7 +77,7 @@
 					<div id="main">
 
 						<!-- About -->
-							<article id="About">
+							<dimarticle id="About">
 								<h2 class="major">What is this course?</h2>
 								<span class="image main"><img src="images/Salamander.jpg" alt="" /></span>
 								<p>Knowing how to work in command line can make troublesome bioinformatic chores a breeze. <br/> <br/> However, not everyone has access to an instructor and code is often scattered across dozens of forum pages. <br/><br/> 
@@ -85,10 +85,10 @@
 								<p>In the lessons each tab is a seperate topic for you to explore. In the corresponding practice, you will find problem sets and solutions that build on the concepts covered.<br/> <br/> 								
 								Learning these core principle and common commands will provide you with the foundation you need to learn additional topics or solve new informatic challenges, hope you enjoy the course! </p>
 								
-							</article>
+							</dimarticle>
 
 						<!-- Work -->
-							<article id="work">
+							<dimarticle id="work">
 								<h2 class="major">Objectives</h2>
 								<span class="image right"><img src="images/graffiti.jpg" alt="" /></span>
 								The objectives of this course are for you to<br/><br/>  
@@ -100,7 +100,7 @@
 										<li>Learn and apply ways to automate repetitive tasks</li>
 									</ul>
 								After completion of this course you should be able to apply the knowledge learned to perform basic bioinformatics tasks such as data cleaning and preprocessing, sequence searching and alignment, and data analysis.	
-							</article>
+							</dimarticle>
 						</div>
 			
 
