--- a/publications.html
+++ b/publications.html
@@ -65,18 +65,36 @@
 													phases in macroevolution: An example using Triggerfishes (Balistidae). In bioRxiv (p. 2022.01.11.475856).
 													<b><a target="_blank" href="https://www.biorxiv.org/content/10.1101/2022.01.11.475856v1">PDF</a></b></li>
 
+											<li>Agan, M, Taylor, W, Willis, W, Lair, H, Murphy, A, Marinelli, A, Young, I, New, G, Islam, M, Dornburg, Alex, Munir, M, Schlueter, J, and Gibas, C. 2022. "Wastewater as a backdoor to serology?" <a target="_blank" href="https://www.medrxiv.org/content/10.1101/2022.11.11.22282224v1">medRxiv</a></li>
+
+											<li>Berv, J, Singhal, S, Field, D, Walker-Hale, N, McHugh, S, Shipley, J, Miller, E, Kimball, R, Braun, E, Dornburg, Alex, Parins-Fukuchi, C, Prum, R, Friedman, M, and Smith, S. 2022. "Molecular early burst associated with the diversification of birds at the K–Pg boundary" <a target="_blank" href="https://www.biorxiv.org/content/10.1101/2022.10.21.513146v1">bioRxiv</a> </li>
+
+									</ul>
+								<h3><b>Publications</b></h3>
+									<h4>2023</h4>
+									<ul><span class="custom_bold">
+											<li>Townsend, JP, Hassler, H. Dornburg, A. Infection by SARS-CoV-2 with alternate frequencies of mRNA vaccine boosting. <i>Journal of Medical Virology. 95:e28461 </i> 
+											Published online 28 April 2022. 
+												<b><a target="_blank" href="https://doi.org/10.1002/jmv.28461"> PDF</a></b></li>
+
+												<li>Wcisel DJ, Dornburg A, McConnell SC, Hernandez KM, Andrade J, de Jong JLO, Litman GW, Yoder JA. A highly diverse set of novel immunoglobulin-like transcript (NILT) genes in zebrafish indicates a wide range of functions with complex relationships to mammalian receptors. <i>Immunogenetics.</i> </li><b><a target="_blank" href="https://doi.org/10.1007/s00251-022-01270-9	"> PDF</a></b></li>
+									</span></ul>
+									<span class="image main"><img src="images/banner2022pubs.jpg" height="300" alt="" /></span>
+
+									<h4>2022</h4>
+										<ul><span class="custom_bold">
+											<li> Townsend, JP, Hassler, HB, Sah, P, Galvani, AP, Dornburg, A. The durability of natural infection and vaccine-induced immunity against future infection by SARS- CoV-2 
+												<i>Proceedings of the Natural Academy of Sciences</i>
+												<b><a href="https://doi.org/10.1073/pnas.2204336119 ">PDF</a></b></li>
+
 											<li>Ghezelayagh A, Harrington RC, Burress ED, Campbell MA, Buckner JC, Chakrabarty P, Glass JR,  McCraney T,
 												Unmack PJ, Thacker CE, Alfaro ME, Friedman ST, Ludt WB, Cowman PF, Friedman M, Price S A, Dornburg
 											 	A, Faircloth BC, Wainwright PC, & Near TJ. Prolonged morphological expansion of spiny-rayed fishes following
-												the end-Cretaceous. In bioRxiv; accepted Nature Ecology & Evolution.
-												<b><a target="_blank" href="https://www.biorxiv.org/content/10.1101/2021.07.12.452083v1">PDF</a></b></li>
+												the end-Cretaceous. <i>Nature Ecology & Evolution</i>
+												<b><a target="_blank" href="https://doi.org/10.1038/s41559-022-01801-3">PDF</a></b></li>
 
-											
-									</ul>
+<li>Dornburg A, Mallik R, Wang Z, Bernal MA, Thompson B, Bruford E, Nebert D, Vasiliou V, Yohe LR, Yoder JA, Townsend JP. Placing human gene families into their evolutionary context. <i>Human Genomics</i> 16 (1), 1-26 <b><a href="https://doi.org/10.1186/s40246-022-00429-5  ">PDF</a></b></li>
 
-								<h3><b>Publications</b></h3>
-									<h4>2022</h4>
-										<ul><span class="custom_bold">
 											<li>Carlson KB, Wcisel DJ, Ackerman HD, Romanet J, Christiansen EF, Niemuth JN, Williams C, Breen M, Stoskopf M, Dornburg A, and Yoder JA. Transcriptome annotation reveals minimal immunogenetic diversity among Wyoming toads, <i>Anaxyrus baxteri</i>. 
 												<i>Conservation Genetics</i>, Published online 28 April 2022. 
 												<b><a target="_blank" href="https://link.springer.com/content/pdf/10.1007/s10592-022-01444-8.pdf"> PDF</a></b></li>
@@ -86,6 +104,8 @@
 												therapy in EGFR-driven lung adenocarcinoma. 
 												<i>Cancer Letters</i>, 526, 346–351.
 												<b><a href="/papers/Fisk et al. 2022.pdf">PDF</a></b></li>
+
+											<li>Parker, E, Zapfe, KL, Yadav, J, Frédérich, B, Jones, CD, Economo, EP, Federman, S, Near, TJ, and Dornburg, A. Pulsed Extinction Drives Convergence in the Adaptive Radiation of Antarctic Fishes.<i>American Naturalist</i><b><a href="https://doi.org/10.1086/721373">PDF</a></b></li>
 
 											<li>Dornburg A, & Yoder JA. On the relationship between extant innate immune receptors and the evolutionary
 												origins of jawed vertebrate adaptive immunity. 
