--- a/publications.html
+++ b/publications.html
@@ -69,6 +69,8 @@
 
 											<li>Berv, J, Singhal, S, Field, D, Walker-Hale, N, McHugh, S, Shipley, J, Miller, E, Kimball, R, Braun, E, Dornburg, Alex, Parins-Fukuchi, C, Prum, R, Friedman, M, and Smith, S. 2022. "Molecular early burst associated with the diversification of birds at the K–Pg boundary" <a target="_blank" href="https://www.biorxiv.org/content/10.1101/2022.10.21.513146v1">bioRxiv</a> </li>
 
+											<li>A chromosome level genome assembly of longnose gar, <i>Lepisosteus osseus</i>. R Mallik, K Carlson, DJ Wcisel, M Fisk, JA Yoder, A Dornburg <a target="_blank" href="https://www.biorxiv.org/content/10.1101/2022.12.21.521478v1">bioRxiv</a> </li>
+
 									</ul>
 								<h3><b>Publications</b></h3>
 									<h4>2023</h4>
