--- a/publications.html
+++ b/publications.html
@@ -67,9 +67,11 @@
 
 											<li>Agan, M, Taylor, W, Willis, W, Lair, H, Murphy, A, Marinelli, A, Young, I, New, G, Islam, M, Dornburg, Alex, Munir, M, Schlueter, J, and Gibas, C. 2022. "Wastewater as a backdoor to serology?" <a target="_blank" href="https://www.medrxiv.org/content/10.1101/2022.11.11.22282224v1">medRxiv</a></li>
 
-											<li>Berv, J, Singhal, S, Field, D, Walker-Hale, N, McHugh, S, Shipley, J, Miller, E, Kimball, R, Braun, E, Dornburg, Alex, Parins-Fukuchi, C, Prum, R, Friedman, M, and Smith, S. 2022. "Molecular early burst associated with the diversification of birds at the K–Pg boundary" <a target="_blank" href="https://www.biorxiv.org/content/10.1101/2022.10.21.513146v1">bioRxiv</a> </li>
+											<li>Berv, J, Singhal, S, Field, D, Walker-Hale, N, McHugh, S, Shipley, J, Miller, E, Kimball, R, Braun, E, Dornburg, A, Parins-Fukuchi, C, Prum, R, Friedman, M, and Smith, S. 2022. "Molecular early burst associated with the diversification of birds at the K–Pg boundary" <a target="_blank" href="https://www.biorxiv.org/content/10.1101/2022.10.21.513146v1">bioRxiv</a> </li>
 
-											<li>R Mallik, K Carlson, DJ Wcisel, M Fisk, JA Yoder, A Dornburg. A chromosome level genome assembly of longnose gar, <i>Lepisosteus osseus</i>.  <a target="_blank" href="https://www.biorxiv.org/content/10.1101/2022.12.21.521478v1">bioRxiv</a> </li>
+											<li>Mallik, R, Carlson, K, Wcisel, DJ, Fisk, M, Yoder, JA, A Dornburg. A chromosome level genome assembly of longnose gar, <i>Lepisosteus osseus</i>.  <a target="_blank" href="https://www.biorxiv.org/content/10.1101/2022.12.21.521478v1">bioRxiv</a> </li>
+
+											<li>Yoder, B, Parker, E, Tew, A, Jones, CD, A Dornburg. Decoupled spectral tuning and eye size diversification patterns in an Antarctic adaptive radiation.  <a target="_blank" href="https://doi.org/10.1101/2022.09.28.509872">bioRxiv</a> </li>
 
 									</ul>
 								<h3><b>Publications</b></h3>
