--- a/commandline.html
+++ b/commandline.html
@@ -96,7 +96,7 @@
 										<li>Understand the basics of the command line interface and how it is used in bioinformatics.</li>
 										<li>Learn and apply basic commands to navigate directories, manage files, and move data around</li>
 										<li>Understand how and when to use variables, conditionals, or loops</li>
-										<li>Use grep, sed, and awk for search, manipulate, or awk to process and extract data from files</li>
+										<li>Use grep, sed, and awk to search, manipulate, process or extract data from files</li>
 										<li>Learn and apply ways to automate repetitive tasks</li>
 									</ul>
 								After completion of this course you should be able to apply the knowledge learned to perform basic bioinformatics tasks such as data cleaning and preprocessing, sequence searching and alignment, and data analysis.	
